feat: Migración de post issue-1
Estos cambios son relacionados a la migración
como indica en el #issue-1, adicional se actualiza
de acuerdo a la nueva plataforma.

A la vez, se incorpora el componente Speakerdeck
a la carpeta `components` para uso global

Se adiciona el attributo `title` al iframe
interno del nuevo componente para evitar warnings
del entorno de desarrollo

*NOTA*

Se remueven las carpeta `layouts`, `src/shortcodes`,
ya que eran parte de un anterior flujo de desarrollo

Se remueve un log de componentes para depuracion
de estas

Se agrega una nueva linea en blanco en
el `gatsby-config` para seguir las convenciones
del proyecto

--- a/blog/2014-03-14-jade-language-node-template-engine-and-html-preprocessor/index.mdx
+++ b/blog/2014-03-14-jade-language-node-template-engine-and-html-preprocessor/index.mdx
@@ -3,7 +3,7 @@ author: jansanchez
 comments: true
 date: 2014-03-14 21:31:48+00:00
 layout: post
-url: 70--jade-language-node-template-engine-and-html-preprocessor
+path: "/70--jade-language-node-template-engine-and-html-preprocessor"
 slug: jade-language-node-template-engine-and-html-preprocessor
 title: Jade Language - Motor de plantillas para nodeJS y Preprocesador HTML
 wordpress_id: 70
@@ -24,8 +24,8 @@ Adicionalmente es un pre-procesador de código [HTML](/tag/html/).
 
 Los dejo con una presentación que hice hace algún tiempo sobre Jade, el código de los ejemplos lo puedes encontrar en este [repositorio en github](https://github.com/jansanchez/jade-examples).
 
-{{< speakerdeck id="f0a8cbd01dce0131047b4ece5468c54b">}}
+<Speakerdeck id="f0a8cbd01dce0131047b4ece5468c54b"/>
 
 Si estás interesado en aprender más sobre Jade, esta web te servirá mucho [learnjade.com](http://www.learnjade.com/)
 
-Si no tienes instalado NodeJs para poder usar Jade Language en linux puedes pasar por nuestro post [Como instalar Nodejs en Debian Linux](/232--como-instalar-nodejs-debian-linux).
+Si no tienes instalado NodeJs para poder usar Jade Language en linux puedes pasar por nuestro post [Como instalar Nodejs en Debian Linux](/232--como-instalar-nodejs-debian-linux).
