feat: add post and test design

--- a/blog/2019-09-08-react/index.mdx
+++ b/blog/2019-09-08-react/index.mdx
@@ -1,7 +1,8 @@
 ---
 path: "/react"
 date: 2019-09-08
-title: "React"
+title: "Introduccion a Hooks en React"
+author: "Wilson"
 tags: 
 - Javascript
 - React
